# knowledge-base

./: .dockerignore  .gitignore  .gitleaks.toml  .stignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MCP_REARCH.md  PROGRESS.md  README.md  README_zh.md  config.example.yaml  config.yaml  create_shortcut.py  docker-compose.yml  main.py  pw_test.txt  pyproject.toml  requirements.txt  run_api.py  run_mcp.py  shinehe.spec  start_app.bat  start_mcp.bat  stop_all_services.bat  windows_service.py  导入mcp的json.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  real-provider-validation.yml
.superpowers/sdd/: task-T2.3-report.md
alembic/: env.py
alembic/versions/: 711b03e11f10_merge_agent_memory_and_indexed_files_.py  b001_block_model.py  c6c24120aff5_baseline_v1_schema.py  d001_users_embedding_cache.py  e001_soft_delete_knowledge.py  f001_agent_memory.py  g001_indexed_files.py  h001_quality_score.py  i001_version_conflict.py  (+4 more)
artifacts/: regression-results.xml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: lexical_zh_dict.txt  lexical_zh_synonyms.txt
docs/: PLAN_execution_phases.md  PROGRESS.md  README.md  SPEC_audit_optimization.md  ShineHe-KB_v1.6.0_全量MCP工具稳定性测试报告.md  ShineHeKB_MCP_第二轮稳定性与边界测试_Spec.md  ShineHeKB_MCP_第二轮问题修复_Spec.md  ShineHeKnowledge 融合收束开发规格说明.md  ShineHe_KB_MCP_稳定性测试报告第5轮.md  ShineHe_KB_第6轮BUG修复执行计划.md  advanced-features.md  demo-local-retrieval.md  knowledge-base 仓库对照 Karpathy LLM 知识库方法论的深度评估报告.md  mcp-stability-repair-2026-07-15.md  repository-cleanup-2026-06-13.md  retrieval-quality.md  update_manual.py
evals/: __init__.py  metrics.py  production_pilot_metrics.py  real_embedding_engine.py  real_hybrid_engine.py  run_ask_e2e_eval.py  run_eval.py  run_hybrid_eval.py  run_knowledge_evolution_eval.py  run_retrieval_eval.py  run_verified_hybrid_release_eval.py  run_wiki_eval.py  run_wiki_v2_semantic_eval.py
installer/: setup.iss
mcp_config_templates/: claude-code.json  cline.json  cursor.json  http-remote.json  opencode.json  roo-code.json  teleclaw.json  windsurf.json
raw/: sample_doc--21bec019.md  sample_doc--35b511f6.md  关于举办中国电信第七届创智杯场景化销售大赛的通知--69407005.md  关于进一步加强自营_合作业务内容信息-先审后发-管控的业务单--5f2b3d12.md  关于进一步规范公域流量运营的通知-待发--ec89e73b.md  第七届创智杯劳动竞赛各赛道评价指标目标下发情况--92c7afeb.md  第七届创智杯劳动竞赛各赛道评价指标目标下发情况--e1a20b92.md  第七届创智杯销售大赛对省宣贯-1--6401454b.md  部门备忘-2022-24号-关于明确劳动竞赛技能竞赛荣誉授予规则的备忘录--692da792.md
reports/: mcp_30round_prod_report.md  mcp_30round_prod_test_live.json  recall_test_v140_final.md  test-report-50rounds.md
schema/: AGENTS.md  AGENTS.md.local-wikifirst  wiki-claim-v1.schema.json  wiki-page-v2.schema.json
scripts/: README.md  _collect_baseline.py  _extract_mcp_domains.py  _extract_mcp_domains_r2.py  _write_catalog.py  auto_tag_batch.py  build_docker.py  build_docs.py  build_production_pilot_datasets.py  build_windows.py  check_db.py  check_mcp.py  dedup_cleanup.py  demo_local_retrieval.py  export_to_file_graph.py  fast_migrate.py  fast_migrate_edges.py  final_closure_baseline.py  final_closure_enrich_golden.py  final_closure_fill_expected_ids.py  final_closure_mcp_harness.py  fix_schema.py  freeze_production_pilot_datasets.py  install-hooks.sh  mcp_30round_prod_test_live.py  mcp_50_round_stability_test.py  mcp_service.py  migrate_phase123.py  migrate_to_block_graph.py  migrate_to_block_store.py  migration_snapshot.py  production_pilot_eval.py  production_pilot_mcp_harness.py  provider_wiring_smoke.py  rebuild_from_md.py  record_canonical_v2_baseline.py  register_windows_service_host.ps1  repair_db.py  repair_db2.py  rescue_data.py  (+7 more)
service_host/: Program.cs
shinehe-gui-goldentime/: generation-tree.json  orchestration-summary.json  shinehe-gui-goldentime.design  validation-report.json
src/: app.py  cli.py  mcp_cli.py  mcp_server.py  version.py
tests/: conftest.py  mcp_post_fix_test.py  test_50round_bugfix.py  test_agent_memory.py  test_alembic_baseline.py  test_api.py  test_app_tray.py  test_async_ingest.py  test_audit_bugfixes.py  test_blend_fusion.py  test_block_store.py  test_canonical_write_guards.py  test_citation_builder.py  test_cli.py  test_cli_wiki.py  test_config_verified_hybrid_migration.py  test_conflict_repo.py  test_context_expansion.py  test_core.py  test_critical_bugfix_e2e.py  test_database_migration_policy.py  test_db.py  test_delete_tools_bug12.py  test_demo_local_retrieval.py  test_docs_consistency.py  test_doctor.py  test_embedding_cache.py  test_embedding_context.py  test_eval_datasets.py  test_evidence_compress.py  test_file_graph.py  test_file_watcher.py  test_find_duplicates.py  test_full_pipeline_e2e.py  test_graph_backend.py  test_graph_perf_smoke.py  test_graph_progress.py  test_graph_view_lifecycle.py  test_hybrid_eval.py  test_index_scheduler.py  (+135 more)
tools/: __init__.py  report_closure_debt.py  run_retrieval_shadow_eval.py  schema_fingerprint.py
(+754 files in other folders)
