[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinehe-knowledge"
dynamic = ["version"]
description = "本地知识库系统 - MCP Server + RAG 智能问答"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "fastmcp>=2.0",
    "sqlite-vec>=0.1.6",
    "openai>=1.0",
    "langchain-text-splitters>=0.0.1",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "jieba>=0.42.1",
    "keyring>=25.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
    "qtawesome>=1.3",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]
parsers = [
    "python-docx>=1.0",
    "PyPDF2>=3.0",
    "pikepdf>=8.0",
    "pycryptodome>=3.20",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
]
wiki = [
    "jinja2>=3.0",
    "markdown>=3.0",
]
all = ["shinehe-knowledge[gui,api,parsers,wiki]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
shinehe-mcp = "src.mcp_cli:main"

[tool.hatch.version]
path = "src/version.py"
variable = "VERSION"

[tool.hatch.build.targets.wheel]
packages = ["src"]
