[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinehe-knowledge"
dynamic = ["version"]
description = "Local-first MCP knowledge retrieval engine for AI assistants"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "fastmcp>=2.0",
    "sqlite-vec>=0.1.6",
    "openai>=1.0",
    "langchain-text-splitters>=0.0.1",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "jieba>=0.42.1",
    "keyring>=25.0",
    "alembic>=1.13",
    "charset-normalizer>=3.3",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
    "qtawesome>=1.3",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]
parsers = [
    "python-docx>=1.0",
    "PyPDF2>=3.0",
    "pikepdf>=8.0",
    "pycryptodome>=3.20",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]
wiki = [
    "jinja2>=3.0",
    "markdown>=3.0",
]
graph = [
    "neo4j>=5.0",
]
local-rerank = [
    "sentence-transformers>=3.0",
]
watch = ["watchdog>=4.0"]
all = ["shinehe-knowledge[gui,api,parsers,wiki,graph,local-rerank,watch]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7.0",
]

[project.scripts]
shinehe = "src.cli:main"
shinehe-mcp = "src.mcp_cli:main"

[tool.hatch.version]
path = "src/version.py"
variable = "VERSION"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["tools.mypy_plugins.database_meta"]
